--- a/dashboard.html
+++ b/dashboard.html
@@ -3107,7 +3107,7 @@
                                 <h2 class="_qhg8fi">
                                   <span>Create a unique video</span>
                                 </h2>
-                                <div class="_w37zq5">
+                                <div class="explore-filter">
                                   <span
                                     >Did you know that you can send video clips
                                     to Airbnb and we’ll create a custom video
