--- a/explore-when.html
+++ b/explore-when.html
@@ -2973,7 +2973,7 @@
                                                                     >
                                                                       <button
                                                                         aria-label="±1 day"
-                                                                        class="_15pf4i2"
+                                                                        class="btn-filter-rounded-sm"
                                                                         role="radio"
                                                                         aria-checked="false"
                                                                         type="button"
@@ -3065,7 +3065,7 @@
                                                                     >
                                                                       <button
                                                                         aria-label="±2 days"
-                                                                        class="_15pf4i2"
+                                                                        class="btn-filter-rounded-sm"
                                                                         role="radio"
                                                                         aria-checked="false"
                                                                         type="button"
@@ -3157,7 +3157,7 @@
                                                                     >
                                                                       <button
                                                                         aria-label="±3 days"
-                                                                        class="_15pf4i2"
+                                                                        class="btn-filter-rounded-sm"
                                                                         role="radio"
                                                                         aria-checked="false"
                                                                         type="button"
@@ -3249,7 +3249,7 @@
                                                                     >
                                                                       <button
                                                                         aria-label="±7 days"
-                                                                        class="_15pf4i2"
+                                                                        class="btn-filter-rounded-sm"
                                                                         role="radio"
                                                                         aria-checked="false"
                                                                         type="button"
@@ -3388,19 +3388,19 @@
                                                                       class="_7yfwnp"
                                                                     >
                                                                       <button
-                                                                        class="_15pf4i2"
+                                                                        class="btn-filter-rounded-sm"
                                                                         role="radio"
                                                                         aria-checked="false"
                                                                         type="button"
                                                                       >
                                                                         <span
-                                                                          class="_w37zq5"
+                                                                          class="explore-filter"
                                                                           >Weekend</span
                                                                         ><span
                                                                           aria-hidden="true"
                                                                           class="button__hidden-text"
                                                                           ><span
-                                                                            class="_w37zq5"
+                                                                            class="explore-filter"
                                                                             >Weekend</span
                                                                           ></span
                                                                         >
@@ -3422,13 +3422,13 @@
                                                                         type="button"
                                                                       >
                                                                         <span
-                                                                          class="_w37zq5"
+                                                                          class="explore-filter"
                                                                           >Week</span
                                                                         ><span
                                                                           aria-hidden="true"
                                                                           class="button__hidden-text"
                                                                           ><span
-                                                                            class="_w37zq5"
+                                                                            class="explore-filter"
                                                                             >Week</span
                                                                           ></span
                                                                         >
@@ -3444,19 +3444,19 @@
                                                                       class="_7yfwnp"
                                                                     >
                                                                       <button
-                                                                        class="_15pf4i2"
+                                                                        class="btn-filter-rounded-sm"
                                                                         role="radio"
                                                                         aria-checked="false"
                                                                         type="button"
                                                                       >
                                                                         <span
-                                                                          class="_w37zq5"
+                                                                          class="explore-filter"
                                                                           >Month</span
                                                                         ><span
                                                                           aria-hidden="true"
                                                                           class="button__hidden-text"
                                                                           ><span
-                                                                            class="_w37zq5"
+                                                                            class="explore-filter"
                                                                             >Month</span
                                                                           ></span
                                                                         >
