--- a/insights.html
+++ b/insights.html
@@ -1612,7 +1612,7 @@
                                     </div>
                                     <div class="_1kbpmas">
                                       <div class="_jd6iv4">
-                                        <button class="_15pf4i2" type="button">
+                                        <button class="btn-filter-rounded-sm" type="button">
                                           <div class="_h3y4zy">
                                             <div>
                                               <span class="_1sz6tyi">1x</span
@@ -1646,7 +1646,7 @@
                                         </button>
                                       </div>
                                       <div class="_jd6iv4">
-                                        <button class="_15pf4i2" type="button">
+                                        <button class="btn-filter-rounded-sm" type="button">
                                           <div class="_h3y4zy">
                                             <div>
                                               <span class="_1sz6tyi">1x</span
