--- a/submission/GuestP.html
+++ b/submission/GuestP.html
@@ -1219,7 +1219,7 @@
                                   </svg>
                                 </span>
                                 <div class="_1kfl0pr">
-                                  <span class="_w37zq5"
+                                  <span class="explore-filter"
                                     >43% of Online Experiences are priced
                                     between ₹793 and ₹1,506. The median price of
                                     Online Experiences booked in the last 7 days
