--- a/submission/discounts.html
+++ b/submission/discounts.html
@@ -1220,7 +1220,7 @@
                                     <div class="_x8sc9r">
                                       Offer group rates and get more bookings
                                     </div>
-                                    <div class="_w37zq5">
+                                    <div class="explore-filter">
                                       Experiences are often booked for multiple
                                       people at once—over half are booked for
                                       groups of 2 or more.
