--- a/wishlist.html
+++ b/wishlist.html
@@ -333,7 +333,7 @@
                                           </div>
                                           <div class="fczcwlc dir dir-ltr">
                                             <button
-                                              class="_15pf4i2"
+                                              class="btn-filter-rounded-sm"
                                               aria-expanded="false"
                                               type="button"
                                             >
