--- a/airbnb-for-work.html
+++ b/airbnb-for-work.html
@@ -276,7 +276,7 @@
                                                 margin-bottom: 32px;
                                               "
                                             >
-                                              <div class="_czm8crp">
+                                              <div class="hero-banner__description">
                                                 <div>
                                                   Add your work email to get
                                                   seamless expensing and
@@ -699,7 +699,7 @@
                                               margin-bottom: 32px;
                                             "
                                           >
-                                            <div class="_czm8crp">
+                                            <div class="hero-banner__description">
                                               <div>
                                                 Add your work email to get
                                                 seamless expensing and exclusive
