--- a/become-a-host/photos.html
+++ b/become-a-host/photos.html
@@ -457,7 +457,7 @@
                                                     "
                                                   >
                                                     <div class="_1k2xyy0">
-                                                      <div class="_1258d0t">
+                                                      <div class="hero-banner__content-bg">
                                                         <div class="_100wjs0">
                                                           <div
                                                             class="img-middle"
@@ -599,7 +599,7 @@
                                                     "
                                                   >
                                                     <div class="_1k2xyy0">
-                                                      <div class="_1258d0t">
+                                                      <div class="hero-banner__content-bg">
                                                         <div class="_100wjs0">
                                                           <div
                                                             class="img-middle"
@@ -736,7 +736,7 @@
                                                     "
                                                   >
                                                     <div class="_1k2xyy0">
-                                                      <div class="_1258d0t">
+                                                      <div class="hero-banner__content-bg">
                                                         <div class="_100wjs0">
                                                           <div
                                                             class="img-middle"
@@ -873,7 +873,7 @@
                                                     "
                                                   >
                                                     <div class="_1k2xyy0">
-                                                      <div class="_1258d0t">
+                                                      <div class="hero-banner__content-bg">
                                                         <div class="_100wjs0">
                                                           <div
                                                             class="img-middle"
@@ -1010,7 +1010,7 @@
                                                     "
                                                   >
                                                     <div class="_1k2xyy0">
-                                                      <div class="_1258d0t">
+                                                      <div class="hero-banner__content-bg">
                                                         <div class="_100wjs0">
                                                           <div
                                                             class="img-middle"
@@ -1135,7 +1135,7 @@
                                             style="padding-bottom: 66.67%"
                                           >
                                             <div class="_1k2xyy0">
-                                              <div class="_1258d0t">
+                                              <div class="hero-banner__content-bg">
                                                 <div
                                                   class="_vvli20"
                                                   aria-label="Add more"
