--- a/covidsafety.html
+++ b/covidsafety.html
@@ -1479,7 +1479,7 @@
                                               safety and cleaning guidelines?
                                             </div>
                                           </div>
-                                          <div class="_czm8crp">
+                                          <div class="hero-banner__description">
                                             <div class="_i87u4ea">
                                               <p>
                                                 All Hosts are required to follow
@@ -1584,7 +1584,7 @@
                                               existing reservation?
                                             </div>
                                           </div>
-                                          <div class="_czm8crp">
+                                          <div class="hero-banner__description">
                                             <div class="_i87u4ea">
                                               <p>
                                                 If you need to change or cancel
@@ -1693,7 +1693,7 @@
                                               created for Airbnb Experiences?
                                             </div>
                                           </div>
-                                          <div class="_czm8crp">
+                                          <div class="hero-banner__description">
                                             <div class="_i87u4ea">
                                               <p>
                                                 Airbnb Experiences are reopened
@@ -1801,7 +1801,7 @@
                                               options are available on Airbnb?
                                             </div>
                                           </div>
-                                          <div class="_czm8crp">
+                                          <div class="hero-banner__description">
                                             <div class="_i87u4ea">
                                               <p>
                                                 <a
