--- a/edit/photos.html
+++ b/edit/photos.html
@@ -477,7 +477,7 @@
                                               style="padding-bottom: 133.33%"
                                             >
                                               <div class="_1k2xyy0">
-                                                <div class="_1258d0t">
+                                                <div class="hero-banner__content-bg">
                                                   <div class="_100wjs0">
                                                     <div
                                                       class="img-middle"
@@ -671,7 +671,7 @@
                                               style="padding-bottom: 133.33%"
                                             >
                                               <div class="_1k2xyy0">
-                                                <div class="_1258d0t">
+                                                <div class="hero-banner__content-bg">
                                                   <div class="_100wjs0">
                                                     <div
                                                       class="img-middle"
@@ -802,7 +802,7 @@
                                               style="padding-bottom: 133.33%"
                                             >
                                               <div class="_1k2xyy0">
-                                                <div class="_1258d0t">
+                                                <div class="hero-banner__content-bg">
                                                   <div class="_100wjs0">
                                                     <div
                                                       class="img-middle"
@@ -933,7 +933,7 @@
                                               style="padding-bottom: 133.33%"
                                             >
                                               <div class="_1k2xyy0">
-                                                <div class="_1258d0t">
+                                                <div class="hero-banner__content-bg">
                                                   <div class="_100wjs0">
                                                     <div
                                                       class="img-middle"
@@ -1064,7 +1064,7 @@
                                               style="padding-bottom: 133.33%"
                                             >
                                               <div class="_1k2xyy0">
-                                                <div class="_1258d0t">
+                                                <div class="hero-banner__content-bg">
                                                   <div class="_100wjs0">
                                                     <div
                                                       class="img-middle"
@@ -1195,7 +1195,7 @@
                                               style="padding-bottom: 133.33%"
                                             >
                                               <div class="_1k2xyy0">
-                                                <div class="_1258d0t">
+                                                <div class="hero-banner__content-bg">
                                                   <div class="_100wjs0">
                                                     <div
                                                       class="img-middle"
@@ -1326,7 +1326,7 @@
                                               style="padding-bottom: 133.33%"
                                             >
                                               <div class="_1k2xyy0">
-                                                <div class="_1258d0t">
+                                                <div class="hero-banner__content-bg">
                                                   <div class="_100wjs0">
                                                     <div
                                                       class="img-middle"
@@ -1457,7 +1457,7 @@
                                               style="padding-bottom: 133.33%"
                                             >
                                               <div class="_1k2xyy0">
-                                                <div class="_1258d0t">
+                                                <div class="hero-banner__content-bg">
                                                   <div class="_100wjs0">
                                                     <div
                                                       class="img-middle"
@@ -1588,7 +1588,7 @@
                                               style="padding-bottom: 133.33%"
                                             >
                                               <div class="_1k2xyy0">
-                                                <div class="_1258d0t">
+                                                <div class="hero-banner__content-bg">
                                                   <div class="_100wjs0">
                                                     <div
                                                       class="img-middle"
@@ -1713,7 +1713,7 @@
                                         style="padding-bottom: 133.33%"
                                       >
                                         <div class="_1k2xyy0">
-                                          <div class="_1258d0t">
+                                          <div class="hero-banner__content-bg">
                                             <div
                                               class="_vvli20"
                                               aria-label="Add a new photo"
