--- a/explore-where.html
+++ b/explore-where.html
@@ -168,7 +168,7 @@
                                                           >
                                                             <div dir="ltr">
                                                               <div
-                                                                class="_1258d0t"
+                                                                class="hero-banner__content-bg"
                                                               >
                                                                 <label
                                                                   for="/homes-1-input"
