--- a/invite-friends.html
+++ b/invite-friends.html
@@ -839,7 +839,7 @@
                     >
                       <div class="_s1tlw0m">People you’ve invited</div>
                     </h1>
-                    <div class="_czm8crp">
+                    <div class="hero-banner__description">
                       The travel credit you earn can be used to book your next
                       home or experience on Airbnb.
                     </div>
@@ -886,7 +886,7 @@
                           >
                             <div class="_18hrqvin">₱0</div>
                           </h2>
-                          <div class="_czm8crp">Available credits</div>
+                          <div class="hero-banner__description">Available credits</div>
                         </section>
                       </div>
                     </div>
