--- a/payments/guest-contributions.html
+++ b/payments/guest-contributions.html
@@ -295,7 +295,7 @@
                                                   for="contributions-opt-out"
                                                   ><span
                                                     id="contributions-opt-out--label"
-                                                    class="_czm8crp"
+                                                    class="hero-banner__description"
                                                     >Allow contributions</span
                                                   ></label
                                                 >
@@ -883,7 +883,7 @@
                                                         for="contributions-opt-out"
                                                         ><span
                                                           id="contributions-opt-out--label"
-                                                          class="_czm8crp"
+                                                          class="hero-banner__description"
                                                           >Allow
                                                           contributions</span
                                                         ></label
