--- a/preferences.html
+++ b/preferences.html
@@ -282,7 +282,7 @@
                                             margin-bottom: 24px;
                                           "
                                         >
-                                          <div class="_czm8crp">English</div>
+                                          <div class="hero-banner__description">English</div>
                                         </div>
                                       </div>
                                       <div class="va-top-nowrap">
@@ -336,7 +336,7 @@
                                             margin-bottom: 24px;
                                           "
                                         >
-                                          <div class="_czm8crp">
+                                          <div class="hero-banner__description">
                                             This updates what you read on
                                             Airbnb, and how we communicate with
                                             you.
@@ -762,7 +762,7 @@
                                             margin-bottom: 24px;
                                           "
                                         >
-                                          <div class="_czm8crp">
+                                          <div class="hero-banner__description">
                                             Philippine peso
                                           </div>
                                         </div>
@@ -999,7 +999,7 @@
                                             margin-bottom: 24px;
                                           "
                                         >
-                                          <div class="_czm8crp">
+                                          <div class="hero-banner__description">
                                             (GMT+08:00) Hong Kong
                                           </div>
                                         </div>
@@ -1989,7 +1989,7 @@
                                                 margin-bottom: 24px;
                                               "
                                             >
-                                              <div class="_czm8crp">
+                                              <div class="hero-banner__description">
                                                 English
                                               </div>
                                             </div>
@@ -2045,7 +2045,7 @@
                                                 margin-bottom: 24px;
                                               "
                                             >
-                                              <div class="_czm8crp">
+                                              <div class="hero-banner__description">
                                                 This updates what you read on
                                                 Airbnb, and how we communicate
                                                 with you.
@@ -2304,7 +2304,7 @@
                                                 margin-bottom: 24px;
                                               "
                                             >
-                                              <div class="_czm8crp">
+                                              <div class="hero-banner__description">
                                                 Philippine peso
                                               </div>
                                             </div>
@@ -2546,7 +2546,7 @@
                                                 margin-bottom: 24px;
                                               "
                                             >
-                                              <div class="_czm8crp">
+                                              <div class="hero-banner__description">
                                                 (GMT+08:00) Hong Kong
                                               </div>
                                             </div>
@@ -3347,7 +3347,7 @@
                                               </div>
                                             </h2>
                                           </div>
-                                          <div class="_czm8crp">
+                                          <div class="hero-banner__description">
                                             Changing your currency updates how
                                             you see prices. You can change how
                                             you get payments in your payments
