--- a/professional-hosting.html
+++ b/professional-hosting.html
@@ -272,14 +272,14 @@
                                 <div class="_1okh7pi0">
                                   <div class="flex-bar">
                                     <div class="flex-bar-item-grow">
-                                      <span class="_czm8crp"
+                                      <span class="hero-banner__description"
                                         ><div class="_1p3joamp">
                                           Company
                                         </div></span
                                       >
                                     </div>
                                     <div class="flex-bar-item">
-                                      <span class="_czm8crp"
+                                      <span class="hero-banner__description"
                                         ><a
                                           href="/users/settings"
                                           class="explore-click"
@@ -670,14 +670,14 @@
                                     <div class="_1okh7pi0">
                                       <div class="flex-bar">
                                         <div class="flex-bar-item-grow">
-                                          <span class="_czm8crp"
+                                          <span class="hero-banner__description"
                                             ><div class="_1p3joamp">
                                               Company
                                             </div></span
                                           >
                                         </div>
                                         <div class="flex-bar-item">
-                                          <span class="_czm8crp"
+                                          <span class="hero-banner__description"
                                             ><a
                                               href="/users/settings"
                                               class="explore-click"
