--- a/submission/GuestP.html
+++ b/submission/GuestP.html
@@ -1187,7 +1187,7 @@
                                         <div class="_1p3joamp">INR</div>
                                       </div>
                                       <div class="inline-block">
-                                        <div class="_czm8crp">17.60</div>
+                                        <div class="hero-banner__description">17.60</div>
                                       </div>
                                     </div>
                                   </div>
@@ -1571,7 +1571,7 @@
                           </div>
                           <h4 class="_gewmsg">Private groups</h4>
                           <div class="_1htwqzi">
-                            <div class="_czm8crp">
+                            <div class="hero-banner__description">
                               If 5 adults are in a group, you will earn ₹98.40
                               for a private group.
                             </div>
