--- a/submission/photo.html
+++ b/submission/photo.html
@@ -1115,7 +1115,7 @@
                                                   "
                                                 >
                                                   <div class="_1k2xyy0">
-                                                    <div class="_1258d0t">
+                                                    <div class="hero-banner__content-bg">
                                                       <div class="_100wjs0">
                                                         <div
                                                           class="img-middle"
@@ -1239,7 +1239,7 @@
                                                   "
                                                 >
                                                   <div class="_1k2xyy0">
-                                                    <div class="_1258d0t">
+                                                    <div class="hero-banner__content-bg">
                                                       <div class="_100wjs0">
                                                         <div
                                                           class="img-middle"
@@ -1363,7 +1363,7 @@
                                                   "
                                                 >
                                                   <div class="_1k2xyy0">
-                                                    <div class="_1258d0t">
+                                                    <div class="hero-banner__content-bg">
                                                       <div class="_100wjs0">
                                                         <div
                                                           class="img-middle"
@@ -1487,7 +1487,7 @@
                                                   "
                                                 >
                                                   <div class="_1k2xyy0">
-                                                    <div class="_1258d0t">
+                                                    <div class="hero-banner__content-bg">
                                                       <div class="_100wjs0">
                                                         <div
                                                           class="img-middle"
@@ -1611,7 +1611,7 @@
                                                   "
                                                 >
                                                   <div class="_1k2xyy0">
-                                                    <div class="_1258d0t">
+                                                    <div class="hero-banner__content-bg">
                                                       <div class="_100wjs0">
                                                         <div
                                                           class="img-middle"
