--- a/transaction_history.html
+++ b/transaction_history.html
@@ -1215,7 +1215,7 @@
                                                       We're unable to process
                                                       your payouts
                                                     </div>
-                                                    <div class="_czm8crp">
+                                                    <div class="hero-banner__description">
                                                       <a
                                                         href="/account-settings/payments/payout-methods"
                                                         class="_12jvhwr"
